formatted index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- NAVBAR -->
     <nav>
-        <div class="left">
+        <div class="left" id="/">
             <a href="/">Nikita Pardeshi</a>
         </div>
         <div class="right">
@@ -35,8 +35,8 @@
                 <span>Github</span>
             </a>
 
-            <a href="https://drive.google.com/file/d/1IQTFG2SBKxcVU757IZ1pQhqW_3RHU_GR/view?usp=sharing" download target="_blank"
-                rel="noopener no-referrer">
+            <a href="https://drive.google.com/file/d/1IQTFG2SBKxcVU757IZ1pQhqW_3RHU_GR/view?usp=sharing" download
+                target="_blank" rel="noopener no-referrer">
                 <i class="fa fa-download"></i>
                 <span>Resume</span>
             </a>
@@ -105,13 +105,13 @@
                 <ul class="testing">
                     <h2>Testing</h2>
                     <li>Manual Testing</li>
-                    <li>Automation Testing</li>
-                    <li>Robot Framework</li>
-                    <li>Selenium</li>
-                    <li>Python Scripting</li>
-                    <li>Shell Scripting</li>
                     <li>System Testing</li>
                     <li>API Testing</li>
+                    <li>Python Scripting</li>
+                    <li>Shell Scripting</li>
+                    <li>Automation Testing</li>
+                    <li>Selenium</li>
+                    <li>Robot Framework</li>
                     <li>End-to-End Testing</li>
                 </ul>
                 <ul class="tools">
@@ -131,13 +131,17 @@
             <h2>About Me</h2>
             <div class="text">
                 <h3>Software Developer, Automation Tester, & QA Engineer</h3>
-                I am Nikita Pardeshi, based in California, US. I am a
-                <b>Software Developer</b> with about two years of experience and background in automation
-                testing. Before transitioning into Software Development, I spent
-                over seven years as a <b>Quality Assurance Engineer</b>, where I learned to break down
-                problems, write test scripts and ensure the delivery of high-quality software.
                 <p>
-                    In addition to my role as a Software Developer, I have also served as a <b>Scrum Master</b> a couple of times in my current position. In this role, I facilitated agile ceremonies and managed sprint planning.
+                    I am Nikita Pardeshi, based in California, US. I am a
+                    <b>Software Developer</b> with about two years of experience and background in automation
+                    testing. Before transitioning into Software Development, I spent
+                    over seven years as a <b>Quality Assurance Engineer</b>, where I learned to break down
+                    problems, write test scripts and ensure the delivery of high-quality software.
+                </p>
+                <p>
+                    In addition to my role as a Software Developer, I have also served as a <b>Scrum Master</b> a couple
+                    of times in my current position. In this role, I facilitated agile ceremonies and managed sprint
+                    planning.
                 </p>
                 <p>
                     Now, as a Software Developer, I leverage my testing knowledge to contribute effectively
@@ -164,7 +168,8 @@
                 <h2>
                     Let's Network
                 </h2>
-                <p>Thanks for visiting my portfolio! Feel free to reach out if you have any questions or opportunities to discuss.
+                <p>Thanks for visiting my portfolio! Feel free to reach out if you have any questions or opportunities
+                    to discuss.
                 </p>
                 <div class='google-form'>
                     <iframe
