update home page href

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
     <!-- NAVBAR -->
     <nav>
-        <div class="left" id="/">
-            <a href="/">Nikita Pardeshi</a>
+        <div class="left">
+            <a href="/nikita_portfolio/">Nikita Pardeshi</a>
         </div>
         <div class="right">
             <a href="https://www.linkedin.com/in/nikita-pardeshi-5bab10157/" target="_blank" rel="noopener no-referrer">
